Fix board coords: lowercase files, bottom padding, eval bar box-sizing
- Use lowercase file coordinates (a-h) like lichess to reduce piece overlap
- Add padding-bottom to file coords to prevent edge clipping
- Fix eval bar box-sizing so border doesn't add 2px to grid column width

--- a/public/chessground.base.css
+++ b/public/chessground.base.css
@@ -154,7 +154,7 @@ piece.fading {
   right: 0;
   flex-flow: row;
   height: 12.5%;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 
 .cg-wrap coords.files.black {
@@ -172,6 +172,7 @@ piece.fading {
   justify-content: flex-start;
   align-items: flex-end;
   padding-left: 4px;
+  padding-bottom: 2px;
   line-height: 1;
 }
 
